--- a/styles.css
+++ b/styles.css
@@ -505,7 +505,7 @@ g > path:nth-of-type(2) {
 }
 
 .product-box, .item-box {
-    background-color: #1b1b22;
+    background-color: #ffffff;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
